--- a/index.html
+++ b/index.html
@@ -92,16 +92,20 @@
     <h1>ナースモードひな祭りおみくじ</h1>
     <h2 id="instruction">タップ！</h2>
     <div class="icon-container">
-        <div class="icon"><img src="sakuramochi.png" alt="アイコン1"></div>
-        <div class="icon"><img src="ohinasama.png" alt="アイコン2"></div>
+    <div class="row">
+        <div class="icon"><img src="Untitled93_20250302091530.png" alt="アイコン1"></div>
+        <div class="icon"><img src="Untitled93_20250302091519.png" alt="アイコン2"></div>
+    </div>
+    <div class="row">
         <div class="icon"><img src="Untitled93_20250302091500.png" alt="アイコン3"></div>
         <div class="icon"><img src="Untitled93_20250302091530.png" alt="アイコン4"></div>
         <div class="icon"><img src="Untitled93_20250302091519.png" alt="アイコン5"></div>
-        <div class="icon"><img src="Untitled93_20250302091500.png" alt="アイコン6"></div>
     </div>
-    <div id="result" class="result"></div>
-    <div id="coupon" class="coupon hidden"></div>
-    <div id="expires" class="expires hidden"></div>
+    <div class="row">
+        <div class="icon"><img src="Untitled93_20250302091500.png" alt="アイコン6"></div>
+        <div class="icon"><img src="Untitled93_20250302091530.png" alt="アイコン7"></div>
+    </div>
+</div>
 
     <script>
         const prizes = [
