--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
             padding: 0;
             background: linear-gradient(to bottom, #ffe4e1, #ffccd5);
             color: #ff69b4;
+            height: 100vh;
+            overflow: hidden;
         }
         h1 {
             font-size: 2.5rem;
@@ -24,22 +26,39 @@
             color: #ff69b4;
         }
         .icon-container {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
             gap: 20px;
-            max-width: 600px;
-            margin: 20px auto;
+            margin-top: 20px;
+        }
+        .icon-container .row {
+            display: flex;
+            justify-content: center;
+            gap: 15px;
         }
         .icon {
-            width: 120px;
-            height: 120px;
+            width: 100px;
+            height: 100px;
             position: relative;
             animation: sway 2s infinite ease-in-out;
             cursor: pointer;
+            background: #fff;
+            border-radius: 50%;
+            box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+        .icon:hover {
+            transform: scale(1.1);
+            box-shadow: 4px 4px 10px rgba(255, 105, 180, 0.5);
         }
         .icon img {
-            width: 100%;
-            height: 100%;
+            width: 70%;
+            height: 70%;
+            margin: auto;
+            display: block;
+            border-radius: 50%;
+            box-shadow: none;
             transition: transform 0.3s ease;
         }
         .icon img:active {
@@ -54,11 +73,12 @@
             100% { transform: rotate(-5deg); }
         }
         @keyframes explode {
-            0% { opacity: 1; transform: scale(1); }
-            100% { opacity: 0; transform: scale(2); }
+            0% { opacity: 1; transform: scale(1); filter: brightness(1); }
+            50% { opacity: 0.7; transform: scale(1.5); filter: brightness(1.5); }
+            100% { opacity: 0; transform: scale(3); filter: brightness(2); }
         }
         .explosion {
-            animation: explode 0.5s forwards;
+            animation: explode 0.8s forwards ease-out;
         }
         .result {
             font-size: 1.5rem;
@@ -83,6 +103,8 @@
             z-index: -1;
             background-image: url('https://www.svgrepo.com/show/276990/sakura-blossom.svg');
             background-size: cover;
+            background-repeat: no-repeat;
+            background-position: center;
             opacity: 0.2;
         }
     </style>
@@ -92,20 +114,23 @@
     <h1>ナースモードひな祭りおみくじ</h1>
     <h2 id="instruction">タップ！</h2>
     <div class="icon-container">
-    <div class="row">
-        <div class="icon"><img src="Untitled93_20250302091530.png" alt="アイコン1"></div>
-        <div class="icon"><img src="Untitled93_20250302091519.png" alt="アイコン2"></div>
+        <div class="row">
+            <div class="icon"><img src="Untitled93_20250302091530.png" alt="アイコン1"></div>
+            <div class="icon"><img src="Untitled93_20250302091519.png" alt="アイコン2"></div>
+        </div>
+        <div class="row">
+            <div class="icon"><img src="Untitled93_20250302091500.png" alt="アイコン3"></div>
+            <div class="icon"><img src="Untitled93_20250302091530.png" alt="アイコン4"></div>
+            <div class="icon"><img src="Untitled93_20250302091519.png" alt="アイコン5"></div>
+        </div>
+        <div class="row">
+            <div class="icon"><img src="Untitled93_20250302091500.png" alt="アイコン6"></div>
+            <div class="icon"><img src="Untitled93_20250302091530.png" alt="アイコン7"></div>
+        </div>
     </div>
-    <div class="row">
-        <div class="icon"><img src="Untitled93_20250302091500.png" alt="アイコン3"></div>
-        <div class="icon"><img src="Untitled93_20250302091530.png" alt="アイコン4"></div>
-        <div class="icon"><img src="Untitled93_20250302091519.png" alt="アイコン5"></div>
-    </div>
-    <div class="row">
-        <div class="icon"><img src="Untitled93_20250302091500.png" alt="アイコン6"></div>
-        <div class="icon"><img src="Untitled93_20250302091530.png" alt="アイコン7"></div>
-    </div>
-</div>
+    <div id="result" class="result"></div>
+    <div id="coupon" class="coupon hidden"></div>
+    <div id="expires" class="expires hidden"></div>
 
     <script>
         const prizes = [
@@ -125,51 +150,4 @@
         let clicked = false;
 
         // 景品をランダムに選ぶ関数
-        function getRandomPrize() {
-            const total = prizes.reduce((sum, prize) => sum + prize.chance, 0);
-            const rand = Math.random() * total;
-            let cumulative = 0;
-
-            for (const prize of prizes) {
-                cumulative += prize.chance;
-                if (rand <= cumulative) {
-                    return prize;
-                }
-            }
-            return prizes[prizes.length - 1]; // 最後の景品を返す
-        }
-
-        // タップ時の動作
-        document.querySelectorAll(".icon").forEach(icon => {
-            icon.addEventListener("click", () => {
-                if (clicked) return; // 既にタップ済みの場合は何もしない
-                clicked = true;
-
-                // 爆発アニメーション
-                const img = icon.querySelector("img");
-                img.classList.add("explosion");
-
-                // 「タップ！」を非表示
-                instruction.classList.add("hidden");
-
-                // 景品を取得
-                const prize = getRandomPrize();
-                setTimeout(() => {
-                    img.style.display = "none"; // アイコンを非表示
-                    resultDiv.textContent = prize.name;
-
-                    // 特賞、一等、四等の場合はクーポンコードと有効期限を表示
-                    if (["特賞！VIPルームサービス&次回本指名セット無料", "一等賞！豪華ディナーコース無料券", "四等賞！オリジナルグッズプレゼント"].includes(prize.name)) {
-                        const couponCode = Math.floor(Math.random() * 900 + 100); // 3桁のランダムな数字
-                        couponDiv.textContent = `クーポンコード: ${couponCode}`;
-                        couponDiv.classList.remove("hidden");
-
-                        expiresDiv.textContent = "有効期限: 2025年5月1日 AM5:00まで";
-                        expiresDiv.classList.remove("hidden");
-                    }
-                }, 500);
-            });
-        });
-    </script>
-</body>
-</html>
+        function getRand
