--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             color: #ff69b4;
             height: 100vh;
             overflow: hidden;
+            position: relative;
         }
         h1 {
             font-size: 2.5rem;
@@ -26,21 +27,14 @@
             color: #ff69b4;
         }
         .icon-container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 20px;
-            margin-top: 20px;
-        }
-        .icon-container .row {
-            display: flex;
-            justify-content: center;
-            gap: 15px;
+            position: relative;
+            width: 100vw;
+            height: 80vh;
         }
         .icon {
             width: 100px;
             height: 100px;
-            position: relative;
+            position: absolute;
             animation: sway 2s infinite ease-in-out;
             cursor: pointer;
             background: #fff;
@@ -53,10 +47,8 @@
             box-shadow: 4px 4px 10px rgba(255, 105, 180, 0.5);
         }
         .icon img {
-            width: 70%;
-            height: 70%;
-            margin: auto;
-            display: block;
+            width: 100%;
+            height: 100%;
             border-radius: 50%;
             box-shadow: none;
             transition: transform 0.3s ease;
@@ -68,9 +60,9 @@
             display: none;
         }
         @keyframes sway {
-            0% { transform: rotate(-5deg); }
-            50% { transform: rotate(5deg); }
-            100% { transform: rotate(-5deg); }
+            0% { transform: translateY(0px); }
+            50% { transform: translateY(-10px); }
+            100% { transform: translateY(0px); }
         }
         @keyframes explode {
             0% { opacity: 1; transform: scale(1); filter: brightness(1); }
@@ -80,74 +72,48 @@
         .explosion {
             animation: explode 0.8s forwards ease-out;
         }
-        .result {
-            font-size: 1.5rem;
-            color: #ff69b4;
-            margin-top: 20px;
-        }
-        .coupon {
-            font-size: 1.2rem;
-            color: #ff69b4;
-            margin-top: 10px;
-        }
-        .expires {
-            font-size: 1rem;
-            color: #ff99cc;
-        }
-        .background {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: -1;
-            background-image: url('https://www.svgrepo.com/show/276990/sakura-blossom.svg');
-            background-size: cover;
-            background-repeat: no-repeat;
-            background-position: center;
-            opacity: 0.2;
-        }
     </style>
 </head>
 <body>
-    <div class="background"></div>
     <h1>ナースモードひな祭りおみくじ</h1>
     <h2 id="instruction">タップ！</h2>
-    <div class="icon-container">
-        <div class="row">
-            <div class="icon"><img src="Untitled93_20250302091530.png" alt="アイコン1"></div>
-            <div class="icon"><img src="Untitled93_20250302091519.png" alt="アイコン2"></div>
-        </div>
-        <div class="row">
-            <div class="icon"><img src="Untitled93_20250302091500.png" alt="アイコン3"></div>
-            <div class="icon"><img src="Untitled93_20250302091530.png" alt="アイコン4"></div>
-            <div class="icon"><img src="Untitled93_20250302091519.png" alt="アイコン5"></div>
-        </div>
-        <div class="row">
-            <div class="icon"><img src="Untitled93_20250302091500.png" alt="アイコン6"></div>
-            <div class="icon"><img src="Untitled93_20250302091530.png" alt="アイコン7"></div>
-        </div>
-    </div>
+    <div class="icon-container" id="iconContainer"></div>
     <div id="result" class="result"></div>
     <div id="coupon" class="coupon hidden"></div>
     <div id="expires" class="expires hidden"></div>
 
     <script>
-        const prizes = [
-            { name: "特賞！VIPルームサービス&次回本指名セット無料", chance: 0.3 },
-            { name: "一等賞！豪華ディナーコース無料券", chance: 0.5 },
-            { name: "二等賞！お好きなドリンク無料", chance: 1 },
-            { name: "三等賞！次回10%オフ券", chance: 20 },
-            { name: "四等賞！オリジナルグッズプレゼント", chance: 65 },
-            { name: "五等賞！もう一回挑戦！", chance: 70 }
+        const allIcons = [
+            "icon1.png", "icon2.png", "icon3.png", "icon4.png",
+            "icon5.png", "icon6.png", "icon7.png", "icon8.png",
+            "icon9.png", "icon10.png", "icon11.png", "icon12.png"
         ];
+        const selectedIcons = [];
+        while (selectedIcons.length < 6) {
+            let randomIcon = allIcons[Math.floor(Math.random() * allIcons.length)];
+            if (!selectedIcons.includes(randomIcon)) {
+                selectedIcons.push(randomIcon);
+            }
+        }
+        
+        const iconContainer = document.getElementById("iconContainer");
+        selectedIcons.forEach(iconSrc => {
+            let icon = document.createElement("div");
+            icon.classList.add("icon");
+            icon.style.left = Math.random() * 80 + "vw";
+            icon.style.top = Math.random() * 70 + "vh";
+            let img = document.createElement("img");
+            img.src = iconSrc;
+            icon.appendChild(img);
+            iconContainer.appendChild(icon);
+        });
 
-        const instruction = document.getElementById("instruction");
-        const resultDiv = document.getElementById("result");
-        const couponDiv = document.getElementById("coupon");
-        const expiresDiv = document.getElementById("expires");
-
-        let clicked = false;
-
-        // 景品をランダムに選ぶ関数
-        function getRand
+        document.querySelectorAll(".icon").forEach(icon => {
+            icon.addEventListener("click", () => {
+                icon.querySelector("img").classList.add("explosion");
+                setTimeout(() => { icon.style.display = "none"; }, 800);
+            });
+        });
+    </script>
+</body>
+</html>
