--- a/index.html
+++ b/index.html
@@ -105,7 +105,17 @@
     <div id="result" class="result"></div>
     <div id="coupon" class="coupon hidden"></div>
     <div id="expires" class="expires hidden"></div>
-
+ <div id="prizes">
+    <p>賞一覧</p>
+    <ul>
+      <li>特賞 VIPルームサービス＆次回本指名セット料金無料♡</li>
+      <li>1等 VIPルームサービス♡</li>
+      <li>2等 お会計1000円OFF♡</li>
+      <li>3等 お会計500円OFF♡</li>
+      <li>4等 次回本指名料無料♡</li>
+      <li>5等 切り餅プレゼント♡</li>
+    </ul>
+  </div>
     <script>
         document.querySelectorAll(".icon").forEach(icon => {
             icon.addEventListener("click", () => {
