--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>ナースモードひな祭りおみくじ</title>
     <style>
         body {
-    aspect-ratio: 4 / 5; /* 画面比率を4:3に設定 */
+    aspect-ratio: 16 / 9;
             font-family: 'Arial', sans-serif;
             text-align: center;
             margin: 0;
