--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 clicked = true;
                 
         const allIcons = [
-            "icon1.png", "icon2.png", "icon3.png", "icon4.png",
+            "ohinasama.png", "goninbayashi2.png", "icon3.png", "icon4.png",
             "icon5.png", "icon6.png", "icon7.png", "icon8.png",
             "icon9.png", "icon10.png", "icon11.png", "icon12.png"
         ];
