--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             position: absolute;
             animation: sway 2s infinite ease-in-out, float 3s infinite alternate ease-in-out;
             cursor: pointer;
-            background: #fff;
+            background: transparent;
             border-radius: 50%;
             box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
