--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ナースモードひな祭りおみくじ</title>
+    <title>ナースモード♡ひな祭りくじ</title>
     <style>
         body {
             aspect-ratio: 9 / 16;
