--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ナースモード♡ひな祭りくじ</title>
+    <title>ナースモードひな祭りおみくじ</title>
     <style>
         body {
             aspect-ratio: 9 / 16;
@@ -161,7 +161,7 @@ const resultText = getRandomPrize();
         couponDiv.style.fontSize = "1.2rem";
         couponDiv.style.color = "#ff1493";
         couponDiv.style.marginTop = "10px";
-        document.body.appendChild(couponDiv);
+        document.getElementById("instruction").appendChild(couponDiv);
     }
             });
         });
