--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
             <li>特賞 VIPルームサービス＆次回本指名セット料金無料♡</li>
             <li>1等 VIPルームサービス♡</li>
             <li>2等 お会計1000円OFF♡</li>
-            <li>3等 お会計500円OFF♡</li>
+            <li>3等 イエーガーサービスj♡</li>
             <li>4等 次回本指名料無料♡</li>
-            <li>5等 切り餅プレゼント♡</li>
+            <li>5等 ひなあられプレゼント♡</li>
         </ul>
     </div>
     <script>
@@ -131,9 +131,9 @@
     { name: "特賞 VIPルームサービス＆次回本指名セット料金無料♡", chance: 0.01 },
     { name: "1等 VIPルームサービス♡", chance: 0.2 },
     { name: "2等 お会計1000円OFF♡", chance: 2 },
-    { name: "3等 お会計500円OFF♡", chance: 30 },
+    { name: "3等 イエーガーサービス♡", chance: 30 },
     { name: "4等 次回本指名料無料♡", chance: 50 },
-    { name: "5等 切り餅プレゼント♡", chance: 60 }
+    { name: "5等 ひなあられプレゼント♡", chance: 60 }
 ];
 
 function getRandomPrize() {
@@ -150,11 +150,11 @@ function getRandomPrize() {
 }
 
 const resultText = getRandomPrize();
-    document.getElementById("instruction").textContent = "あなたの結果: " + resultText;
+    document.getElementById("instruction").textContent = resultText;
     
     if (resultText.includes("特賞") || resultText.includes("1等") || resultText.includes("4等")) {
         const couponCode = Math.floor(Math.random() * 900 + 100);
-        const couponText = `次回使えるクーポン♡ フロントでご提示ください: ${couponCode}`;
+        const couponText = `次回使えるクーポン♡ フロントにてご提示ください。有効期限：5/1AM5:00まで♡: ${couponCode}`;
         
         let couponDiv = document.createElement("div");
         couponDiv.textContent = couponText;
