--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <li>特賞 VIPルームサービス＆次回本指名セット料金無料♡</li>
             <li>1等 VIPルームサービス♡</li>
             <li>2等 お会計1000円OFF♡</li>
-            <li>3等 イエーガーサービスj♡</li>
+            <li>3等 イエーガーサービス♡</li>
             <li>4等 次回本指名料無料♡</li>
             <li>5等 ひなあられプレゼント♡</li>
         </ul>
@@ -154,7 +154,7 @@ const resultText = getRandomPrize();
     
     if (resultText.includes("特賞") || resultText.includes("1等") || resultText.includes("4等")) {
         const couponCode = Math.floor(Math.random() * 900 + 100);
-        const couponText = `次回使えるクーポン♡ フロントにてご提示ください。有効期限：5/1AM5:00まで♡: ${couponCode}`;
+        const couponText = `次回使えるクーポン♡クーポンコード: ${couponCode}　フロントにてご提示ください。有効期限：5/1AM5:00まで♡`;
         
         let couponDiv = document.createElement("div");
         couponDiv.textContent = couponText;
