--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
                 setTimeout(() => { icon.style.display = "none"; }, 800);
                 const prizePool = [
     { name: "特賞 VIPルームサービス＆次回本指名セット料金無料♡", chance: 0.01 },
-    { name: "1等 VIPルームサービス♡", chance: 0.2 },
-    { name: "2等 お会計1000円OFF♡", chance: 2 },
+    { name: "1等 VIPルームサービス♡", chance: 0.02 },
+    { name: "2等 お会計1000円OFF♡", chance: 0.2 },
     { name: "3等 イエーガーサービス♡", chance: 30 },
     { name: "4等 次回本指名料無料♡", chance: 50 },
     { name: "5等 ひなあられプレゼント♡", chance: 60 }
@@ -154,7 +154,7 @@ const resultText = getRandomPrize();
     
     if (resultText.includes("特賞") || resultText.includes("1等") || resultText.includes("4等")) {
         const couponCode = Math.floor(Math.random() * 900 + 100);
-        const couponText = `次回使えるクーポン♡クーポンコード: ${couponCode}　フロントにてご提示ください。有効期限：5/1AM5:00まで♡`;
+        const couponText = `次回使えるクーポン♡クーポンコード: ${couponCode}　クーポンコードをフロントにてご提示ください。有効期限　5/1AM5:00まで♡`;
         
         let couponDiv = document.createElement("div");
         couponDiv.textContent = couponText;
