--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ const resultText = getRandomPrize();
     
     if (resultText.includes("特賞") || resultText.includes("1等") || resultText.includes("4等")) {
         const couponCode = Math.floor(Math.random() * 900 + 100);
-        const couponText = `次回使えるクーポン♡クーポンコード: ${couponCode}　クーポンコードをフロントにてご提示ください。有効期限　5/1AM5:00まで♡`;
+        const couponText = `次回使えるクーポン♡クーポンコード: ${couponCode}<br>クーポンコードをフロントにてご提示ください。<br>有効期限　5/1AM5:00まで♡`;
         
         let couponDiv = document.createElement("div");
         couponDiv.textContent = couponText;
