--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>ナースモード♡ひなまつりくじ</title>
     <style>
         body {
@@ -87,7 +87,7 @@
 </head>
 <body>
     <h1 id="result">ナースモード♡<br>ひなまつりくじ</h1>
-    <h2 id="instruction">タップ！</h2>
+    
     <div class="icon-container" id="iconContainer"></div>
     <div id="prizes" class="prize-list">
         <h3>賞一覧</h3>
