--- a/index.html
+++ b/index.html
@@ -83,14 +83,19 @@
             height: 80px;
         }
     }
+    html, body {
+        width: 100vw;
+        max-width: 100vw;
+        overflow-x: hidden;
+    }
 </style>
 </head>
 <body>
     <h1 id="result">ナースモード♡<br>ひなまつりくじ</h1>
-    
+
     <div class="icon-container" id="iconContainer"></div>
     <div id="prizes" class="prize-list">
-        <h3>賞一覧</h3>
+        <h2>賞一覧</h2>
         <ul>
             <li>特賞 VIPルームサービス＆次回本指名セット料金無料♡</li>
             <li>1等 VIPルームサービス♡</li>
