--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>ナースモード♡ひなまつりくじ</title>
     <style>
+         @import url('https://fonts.googleapis.com/earlyaccess/reepokakukana.css');
         body {
             aspect-ratio: 9 / 16;
-            font-family: 'Arial', sans-serif;
+            font-family: 'ReePopKakuKana', sans-serif;
             text-align: center;
             margin: 0;
             padding: 0;
