--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>ナースモード♡ひなまつりくじ</title>
     <style>
-         @import url('https://fonts.googleapis.com/earlyaccess/reepokakukana.css');
+        @import url('https://fonts.googleapis.com/css2?family=Ree+Pop+Kaku+Kana&display=swap');
         body {
             aspect-ratio: 9 / 16;
             font-family: 'ReePopKakuKana', sans-serif;
